gitops/minio/ingress-console.yaml
xapiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
    external-dns.alpha.kubernetes.io/hostname: "console.minio.konst.fish"
spec:
  tls:
    - hosts:
        - console.minio.konst.fish
      secretName: minio-console-tls
  rules:
    - host: console.minio.konst.fish
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: minio-console
                port:
                  number: 9090
